# hw

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: calc.rs  cc.rs  coin.rs  gen_passwd.rs  main.rs  notes.rs  tfi.rs  weather.rs
